# baro2D

./: .gitignore  CMakeLists.txt
Components/: animation_component.cpp  animation_component.h  hitbox_component.cpp  hitbox_component.h  movement_component.cpp  movement_component.h
Config/: gamestate_keybinds.ini  window.ini
Controls/: control.cpp  control.h
Entities/: entity.cpp  entity.h  sub.cpp  sub.h
Map/: map.cpp  map.h
States/: game_state.cpp  game_state.h  main_menu_state.cpp  main_menu_state.h  settings_state.cpp  settings_state.h  state.cpp  state.h
UI/: button.cpp  button.h  end_game_menu.cpp  end_game_menu.h  gui.cpp  gui.h  pause_menu.cpp  pause_menu.h  sonar.cpp  sonar.h
Utils/: sf_math.h  sf_shapes.h
src/: game.cpp  game.h  headers.h  main.cpp
